@@ -8,6 +8,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - only clear the mom state when actually running the health check script
       (backported from 2.5.3)
   b - don't try to set the user id multiple times - (backported from 2.5.3)
+  c - fix segfault in tracejob. It wasn't malloc'ing space for the null 
+      terminator (back-ported from 2.5.3)
 
 2.4.10
   b - fix to get new pagg ID and add additional CSA records when restarting from
